[project]
name = "thesis"
version = "0.1.0"
description = "Thesis project about causal discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "causal-learn>=0.1.4.4",
    "crunch-cli>=8.0.0",
    "dcor>=0.7",
    "econml>=0.16.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "papermill>=2.7.0",
    "pingouin>=0.6.0",
    "pytorch-lightning>=2.5.5",
    "scikit-learn>=1.6.1",
    "semopy>=2.3.11",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]

[tool.uv.extra-build-dependencies]
xformers = ["torch"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
